// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page can delete typed text with backspace 1`] = `
<DocumentFragment>
  .emotion-16 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-13 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-2 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-1 {
  font-size: 0.75rem;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-3 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-7 {
  position: relative;
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
  left: 1px;
  top: 0px;
}

.emotion-12 {
  height: 0;
  width: 0;
}

.emotion-15 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-5 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-10 {
  font-size: 1rem;
}

<div
    class="emotion-16"
  >
    <main
      class="emotion-13"
    >
      <h1
        class="emotion-2"
      >
        Typeland
        <span
          class="emotion-1"
        >
           [Mode : 
          <button
            class="emotion-0"
          >
            default
          </button>
          ]
        </span>
      </h1>
      <div
        class="emotion-9"
      >
        <p
          class="emotion-3"
          data-testid="template"
        >
          the quick brown fox jumps over the lazy dog
        </p>
        <p
          class="emotion-3"
          data-testid="user"
        >
          <span
            class="emotion-7"
          >
            <span
              class="emotion-4"
              data-testid="caret"
            />
            <span
              class="correct emotion-5"
              data-testid="correct"
            >
              t
            </span>
            <span
              class="correct emotion-5"
              data-testid="correct"
            >
              h
            </span>
          </span>
          <span>
             
          </span>
        </p>
      </div>
      <div
        class="emotion-10"
      >
        0 wpm
      </div>
      <div
        class="emotion-10"
      >
        Stats (correct/wrong/total) : 0/0/0
      </div>
      <input
        class="emotion-12"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-15"
    >
      <a
        class="emotion-1"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page highlights text which is typed 1`] = `
<DocumentFragment>
  .emotion-17 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-14 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-2 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-1 {
  font-size: 0.75rem;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-3 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-8 {
  position: relative;
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
  left: 1px;
  top: 0px;
}

.emotion-13 {
  height: 0;
  width: 0;
}

.emotion-16 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-5 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-11 {
  font-size: 1rem;
}

.emotion-7 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

<div
    class="emotion-17"
  >
    <main
      class="emotion-14"
    >
      <h1
        class="emotion-2"
      >
        Typeland
        <span
          class="emotion-1"
        >
           [Mode : 
          <button
            class="emotion-0"
          >
            default
          </button>
          ]
        </span>
      </h1>
      <div
        class="emotion-10"
      >
        <p
          class="emotion-3"
          data-testid="template"
        >
          the quick brown fox jumps over the lazy dog
        </p>
        <p
          class="emotion-3"
          data-testid="user"
        >
          <span
            class="emotion-8"
          >
            <span
              class="emotion-4"
              data-testid="caret"
            />
            <span
              class="correct emotion-5"
              data-testid="correct"
            >
              t
            </span>
            <span
              class="correct emotion-5"
              data-testid="correct"
            >
              h
            </span>
            <span
              class="wrong emotion-7"
              data-testid="wrong"
            >
              x
            </span>
          </span>
          <span>
             
          </span>
        </p>
      </div>
      <div
        class="emotion-11"
      >
        0 wpm
      </div>
      <div
        class="emotion-11"
      >
        Stats (correct/wrong/total) : 0/0/0
      </div>
      <input
        class="emotion-13"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-16"
    >
      <a
        class="emotion-1"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page renders title 1`] = `
<DocumentFragment>
  .emotion-12 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-9 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-2 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-1 {
  font-size: 0.75rem;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-3 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-5 {
  position: relative;
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
  left: 1px;
  top: 0px;
}

.emotion-8 {
  height: 0;
  width: 0;
}

.emotion-11 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

<div
    class="emotion-12"
  >
    <main
      class="emotion-9"
    >
      <h1
        class="emotion-2"
      >
        Typeland
        <span
          class="emotion-1"
        >
           [Mode : 
          <button
            class="emotion-0"
          >
            default
          </button>
          ]
        </span>
      </h1>
      <div
        class="emotion-7"
      >
        <p
          class="emotion-3"
          data-testid="template"
        >
          the quick brown fox jumps over the lazy dog
        </p>
        <p
          class="emotion-3"
          data-testid="user"
        >
          <span
            class="emotion-5"
          >
            <span
              class="emotion-4"
              data-testid="caret"
            />
          </span>
          <span>
             
          </span>
        </p>
      </div>
      <input
        class="emotion-8"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-11"
    >
      <a
        class="emotion-1"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;
